# metservice-weather

./: .devcontainer.json  .gitignore  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  CORE_REVIEW.md  LICENSE  README.md  hacs.json  metservice_dataclass_refactor_plan.md  metservice_silver_plan.md  pyproject.toml  release_notes.md  requirements-test.txt  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml  validate.yml
custom_components/metservice_weather/: __init__.py  config_flow.py  const.py  coordinator.py  coordinator_types.py  deprecation.py  diagnostics.py  entity.py  helpers.py  icons.json  manifest.json  repairs.py  sensor.py  strings.json  weather.py  weather_current_conditions_sensors.py
custom_components/metservice_weather/translations/: en.json
scripts/: capture_fixtures.py  get_cities.py  lint.sh  setup  sync_to_core.sh  test.sh
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_coordinator_data.py  test_deprecation.py  test_entity.py  test_init.py  test_normalizer.py  test_repairs.py  test_seasonal_gating.py  test_sensor.py  test_weather.py
tests/fixtures/: kumeu_public_current.json  kumeu_public_daily.json  napier_public_current.json  napier_public_daily.json
